[gd_scene load_steps=10 format=3 uid="uid://bajk6nx4csred"]

[ext_resource type="Texture2D" uid="uid://cjerph823xhqe" path="res://Visual assets/Textures/stars_hq1.png" id="1_b5ide"]
[ext_resource type="Script" path="res://Visual assets/crystal_ball_3d.gd" id="1_etdy3"]
[ext_resource type="Texture2D" uid="uid://cgvswunywht3r" path="res://Visual assets/Textures/stars_hq2.png" id="2_25h4w"]
[ext_resource type="Texture2D" uid="uid://dxjh8l542g1ca" path="res://Visual assets/Textures/stars_hq3.png" id="3_jxdjp"]

[sub_resource type="Environment" id="Environment_b1vle"]
background_energy_multiplier = 0.0

[sub_resource type="SphereMesh" id="SphereMesh_8efto"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_x1u1u"]
transparency = 1
cull_mode = 2
albedo_texture = ExtResource("1_b5ide")
subsurf_scatter_enabled = true
subsurf_scatter_strength = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rdgy8"]
transparency = 1
cull_mode = 2
albedo_texture = ExtResource("2_25h4w")
subsurf_scatter_enabled = true
subsurf_scatter_strength = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kao7a"]
transparency = 1
cull_mode = 2
albedo_texture = ExtResource("3_jxdjp")
subsurf_scatter_enabled = true
subsurf_scatter_strength = 1.0

[node name="Node3D" type="Node3D"]
script = ExtResource("1_etdy3")
scale_1 = 1.0
rotation_speed_1 = 0.315
scale_2 = 1.0
rotation_speed_2 = 0.215
rotation_speed_3 = 0.145

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_b1vle")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.668793, 0.743448, 0, -0.743448, 0.668793, 0, 0.733176, 0.554885)
light_energy = 2.9

[node name="Layer1" type="MeshInstance3D" parent="."]
transform = Transform3D(0.234117, 2.57436e-16, 0.972208, 3.48787e-16, 1, -3.48787e-16, -0.972208, 4.2075e-16, 0.234117, 0, 0, 0)
mesh = SubResource("SphereMesh_8efto")
surface_material_override/0 = SubResource("StandardMaterial3D_x1u1u")

[node name="Layer2" type="MeshInstance3D" parent="."]
transform = Transform3D(-0.685803, 0, -0.582816, 0, 0.9, 0, 0.582816, 0, -0.685803, 0, 0, 0)
mesh = SubResource("SphereMesh_8efto")
skeleton = NodePath("../Layer1")
surface_material_override/0 = SubResource("StandardMaterial3D_rdgy8")

[node name="Layer3" type="MeshInstance3D" parent="."]
transform = Transform3D(0.556821, 0, -0.574413, 0, 0.8, 0, 0.574413, 0, 0.556821, 0, 0, 0)
mesh = SubResource("SphereMesh_8efto")
skeleton = NodePath("../Layer1")
surface_material_override/0 = SubResource("StandardMaterial3D_kao7a")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.669728)
projection = 1
